[package]
name = "kv"
version = "0.23.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["key-value-store", "database", "sled"]
repository = "https://github.com/zshipko/rust-kv"
documentation = "https://docs.rs/kv"
description = "An embedded key/value store for Rust"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
sled = "0.34"
thiserror = "1"
toml = "0.5"
pin-project-lite = "0.2"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", optional = true}
rmp-serde = {version = "1.0", optional = true}
bincode = {version = "1.3", optional = true}
serde-lexpr = {version = "0.1", optional = true}

[features]
default = []
json-value = ["serde_json"]
msgpack-value = ["rmp-serde"]
bincode-value = ["bincode"]
lexpr-value = ["serde-lexpr"]
compression = ["sled/compression"]
