[package]
name = "kv"
version = "0.24.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["key-value-store", "database", "sled"]
repository = "https://github.com/zshipko/rust-kv"
documentation = "https://docs.rs/kv"
description = "An embedded key/value store for Rust"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
[dependencies]
sled = "0.34.7"
thiserror = "1.0.57"
toml = "0.5.11"  # Keeping this version for from_slice compatibility
pin-project-lite = "0.2.13"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", optional = true }
rmp-serde = { version = "1.1.2", optional = true }
bincode = { version = "1.3.3", optional = true }
serde-lexpr = { version = "0.1.3", optional = true }

[features]
default = []
json-value = ["serde_json"]
msgpack-value = ["rmp-serde"]
bincode-value = ["bincode"]
lexpr-value = ["serde-lexpr"]
compression = ["sled/compression"]
